--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/gatitu4.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>teste</title>
+    <link rel="icon" href="/gatitu.jpg" type="image/png">
+    <title>Portfólio - Lais Cristina</title>
   </head>
   <body>
     <div id="root"></div>
